[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/init/ConnectingLabel.gd" type="Script" id=1]
[ext_resource path="res://scenes/init/Init.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Init" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroPanel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="IntroPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -81.5
margin_right = 118.0
margin_bottom = -14.5
text = "Connect Online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfflineButton" type="Button" parent="IntroPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = 18.5
margin_right = 98.0
margin_bottom = 85.5
text = "Play Offline"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingPanel" type="Panel" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingLabel" type="Label" parent="ConnectingPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -30.5
margin_right = 105.0
margin_bottom = 30.5
text = "Connecting..."
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorPanel" type="Panel" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ErrorPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -200.025
margin_right = 220.0
margin_bottom = -139.025
text = "Error connecting to server!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="ErrorPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -139.025
margin_right = 82.5
margin_bottom = -78.0246
text = "Error"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ErrorPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.5
margin_top = -78.0246
margin_right = 66.5
margin_bottom = -17.0246
text = "What do?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="ErrorPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -10.8077
margin_right = 48.5
margin_bottom = 56.1923
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfflineButton" type="Button" parent="ErrorPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = 81.2961
margin_right = 98.0
margin_bottom = 148.296
text = "Play Offline"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 1 )

[connection signal="pressed" from="IntroPanel/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="IntroPanel/OfflineButton" to="." method="_on_OfflineButton_pressed"]
[connection signal="pressed" from="ErrorPanel/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="ErrorPanel/OfflineButton" to="." method="_on_OfflineButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
